--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,9 @@
   "database": {
     "rules": "database.rules.json"
   },
+  "storage": {
+    "rules": "storage.rules"
+  },
   "functions": {
     "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"],
     "source": "functions"
